--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
   "description": "ProductsCategoriesResourceRelationship module",
   "license": "proprietary",
   "require": {
+    "php": ">=7.1",
     "spryker/glue-application": "^1.0.0",
     "spryker/glue-application-extension": "^1.0.0",
     "spryker/kernel": "^3.22.0"
@@ -14,11 +15,6 @@
   "autoload": {
     "psr-4": {
       "Spryker\\": "src/Spryker/"
-    }
-  },
-  "autoload-dev": {
-    "psr-4": {
-      "SprykerTest\\": "tests/SprykerTest/"
     }
   },
   "minimum-stability": "dev",
