--- a/composer.json
+++ b/composer.json
@@ -4,9 +4,12 @@
   "license": "proprietary",
   "require": {
     "php": ">=7.1",
+    "spryker/categories-rest-api": "^1.0.0",
     "spryker/glue-application": "^1.0.0",
     "spryker/glue-application-extension": "^1.0.0",
-    "spryker/kernel": "^3.22.0"
+    "spryker/kernel": "^3.22.0",
+    "spryker/product-category-storage": "^1.0.0",
+    "spryker/product-storage": "^1.0.0"
   },
   "require-dev": {
     "spryker/code-sniffer": "*",
